syntax="proto3";

option csharp_namespace = "ThmTPService.Services";
package Services;

service Connector {
    rpc Login (LoginReq) returns (LoginRsp);
    rpc InitConnection (ConnectReq) returns (ConnectRsp);
}

message LoginReq {
    string user_id =1;
    string server =3;
    int32 port =4;
}

message LoginRsp {
    string message = 1;
}

message ConnectReq {

}

message ConnectRsp {

}
